Aggregator pom fix Signed-off-by: Konstantin Pozdeev <konstantinp@radware.com>